<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/Widget.Timerz.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/custom_dialog_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/select_theme"
                android:textAppearance="?textAppearanceBody1"
                android:textSize="21sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/theme_group">

                <RadioButton
                    android:layout_margin="8dp"
                    android:id="@+id/light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light"/>

                <RadioButton
                    android:layout_margin="8dp"
                    android:id="@+id/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/okay"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="24dp"
                    android:lineSpacingExtra="16dp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="?colorSecondary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
